<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/container_determined"
        android:visibility="gone"
        android:background="@color/white"
        >


        <TextView
            android:id="@+id/server_error_txt"
            android:layout_width="@dimen/_101sdp"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/server_error"
            android:textAppearance="@style/server_error_style"
            android:lineSpacingExtra="-6sp"
            android:gravity="center_horizontal|top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            />

        <TextView
            android:id="@+id/server_not_found"
            android:layout_width="271dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/_21sdp"

            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/server_not_answer"
            android:textAppearance="@style/server_not_answer_style"
            android:translationY="-0.47sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/server_error_txt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/server_not_found"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/error_text_button_style"
            android:text="@string/error_btn_text"
            android:background="@null"
            android:layout_marginTop="@dimen/_32sdp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/container_not_determined"
        android:background="@color/white"
        >


        <TextView
            android:id="@+id/server_error_txt_not_determined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_error_not_determined"
            android:textAppearance="@style/server_error_style"
            android:lineSpacingExtra="-6sp"
            android:gravity="center_horizontal|top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            />

        <TextView
            android:id="@+id/server_not_found_not_determined"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21sdp"

            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/server_not_answer_not_determined"
            android:textAppearance="@style/server_not_answer_style"
            android:translationY="-0.47sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/server_error_txt_not_determined" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok_btn_not_determined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/server_not_found_not_determined"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/error_text_button_style"
            android:text="@string/error_btn_text"
            android:background="@null"
            android:layout_marginTop="@dimen/_32sdp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>